Fix a couple of syntax errors.
git-svn-id: http://varnish-cache.org/svn/trunk@25 d4fa192b-c00b-0410-8231-f00ffab90ce4

--- a/varnish-doc/share/docbook-xml.css
+++ b/varnish-doc/share/docbook-xml.css
@@ -144,13 +144,13 @@ orderedlist, itemizedlist {
 
 orderedlist > listitem {
 	display: list-item;
-	list-style-type: roman inside;
+	list-style: decimal inside;
 	margin-left: 4em;
 }
 
 itemizedlist > listitem {
 	display: list-item;
-	list-style-type: disc inside;
+	list-style: disc inside;
 	margin-left: 4em;
 }
 
@@ -163,7 +163,7 @@ xref:before {
 
 xref {
 	color: blue;
-	font-decoration: underline;
+	text-decoration: underline;
 }
 
 xref:after {
