Correct list rendering.
git-svn-id: http://varnish-cache.org/svn/trunk@33 d4fa192b-c00b-0410-8231-f00ffab90ce4

--- a/varnish-doc/share/docbook-xml.css
+++ b/varnish-doc/share/docbook-xml.css
@@ -150,7 +150,7 @@ orderedlist > listitem {
 
 itemizedlist > listitem {
 	display: list-item;
-	list-style: disc inside;
+	list-style: disc outside;
 	margin-left: 4em;
 }
 
