Format <command>, <literal> and <varname> in monospace.
git-svn-id: http://varnish-cache.org/svn/trunk@1821 d4fa192b-c00b-0410-8231-f00ffab90ce4

--- a/varnish-doc/share/docbook-xml.css
+++ b/varnish-doc/share/docbook-xml.css
@@ -230,7 +230,19 @@ xref:after {
 /*
  * Misc
  */
+command {
+	font-family: monospace;
+}
+
 filename {
+	font-family: monospace;
+}
+
+literal {
+	font-family: monospace;
+}
+
+varname {
 	font-family: monospace;
 }
 
