A mojor update to the web GUI, unfortunately all done in one go. Nevertheless, here it is, and has many improvements to the christmas edition commited in december:
- the GUI now uses a sqlite3 database for storage, so all configuratons are stored
- aggregated statistics for groups
- graphs on demand for raw data
- CSV export of stat data
- 'Restricted mode' to get a web GUI which prevent you from doing changes
- logging of changes performed in the GUI
- generall minor improvements in the GUI

Additional perl module dependencies are Algorithm::Diff and DBD::Sqlite3

A proper documentation will appear on the wiki in a couple of days to describe all that can be done with the web GUI. 



git-svn-id: http://varnish-cache.org/svn/trunk@3786 d4fa192b-c00b-0410-8231-f00ffab90ce4

--- a/varnish-tools/webgui/templates/configure_parameters.tmpl
+++ b/varnish-tools/webgui/templates/configure_parameters.tmpl
@@ -20,15 +20,15 @@ function toggleHelp(sectionId) {
 <TMPL_IF NAME=IS_NODE>
 <input type="hidden" name="node_id" value="<TMPL_VAR NAME=ID>"/>
 <TMPL_ELSE>
-<input type="hidden" name="group" value="<TMPL_VAR NAME=ID>"/>
+<input type="hidden" name="group_id" value="<TMPL_VAR NAME=ID>"/>
 </TMPL_IF>
 <TMPL_ELSE>
 <span class="tab">
 </TMPL_IF>
 <TMPL_IF NAME=IS_NODE>
-<a href="configure_parameters?node_id=<TMPL_VAR NAME=ID>"><TMPL_VAR NAME=NAME> (node)</a>
+<a href="configure_parameters?node_id=<TMPL_VAR NAME=ID>"><TMPL_VAR NAME=NAME> (N)</a>
 <TMPL_ELSE>
-<a href="configure_parameters?group=<TMPL_VAR NAME=ID>"><TMPL_VAR NAME=NAME> (group)</a>
+<a href="configure_parameters?group_id=<TMPL_VAR NAME=ID>"><TMPL_VAR NAME=NAME> (G)</a>
 </TMPL_IF>
 </span>
 </TMPL_LOOP>
@@ -37,13 +37,24 @@ function toggleHelp(sectionId) {
 <table id="parameters">
 <tr><td class="header">Name</td><td class="header">Value</td><td class="header">Unit</td><td class="header"></td></tr>
 <TMPL_LOOP NAME=PARAMETER_INFOS>
-<TMPL_IF NAME=ODD_ROW>
+<TMPL_IF NAME=__ODD__>
 <tr class="oddRow">
 <TMPL_ELSE>
 <tr class="evenRow">
 </TMPL_IF>
 <td class="parameterLabel"><TMPL_VAR NAME=NAME></td>
 <td class="parameterValue">
+<TMPL_IF NAME=RESTRICTED>
+<TMPL_IF NAME=IS_BOOLEAN>
+<TMPL_IF NAME=VALUE>
+on
+<TMPL_ELSE>
+off
+</TMPL_IF>
+<TMPL_ELSE>
+<TMPL_VAR NAME=VALUE>
+</TMPL_IF>
+<TMPL_ELSE>
 <TMPL_IF NAME=IS_BOOLEAN>
 <select name="new_<TMPL_VAR NAME=NAME>">
 <TMPL_IF NAME=VALUE>
@@ -57,7 +68,6 @@ function toggleHelp(sectionId) {
 <TMPL_ELSE>
 <input type="text" name="new_<TMPL_VAR NAME=NAME>" value="<TMPL_VAR NAME=VALUE>"/>
 </TMPL_IF>
-
 <TMPL_IF NAME=IS_BOOLEAN>
 <TMPL_IF NAME=VALUE>
 <input type="hidden" name="old_<TMPL_VAR NAME=NAME>" value="on"/>
@@ -67,7 +77,7 @@ function toggleHelp(sectionId) {
 <TMPL_ELSE>
 <input type="hidden" name="old_<TMPL_VAR NAME=NAME>" value="<TMPL_VAR NAME=VALUE>"/>
 </TMPL_IF>
-
+</TMPL_IF>
 </td>
 <td class="parameterUnit"><TMPL_VAR NAME=UNIT></td>
 <td class="parameterDescription">
@@ -78,9 +88,11 @@ function toggleHelp(sectionId) {
 </td>
 </tr>
 </TMPL_LOOP>
+<TMPL_UNLESS NAME=RESTRICTED>
 <tr><td class="footer" colspan="4">
 <input type="submit" value="Update"/>
 </td></tr>
+</TMPL_UNLESS>
 </form>
 </table>
 </div>
