--- a/varnish-tools/webgui/templates/master.tmpl
+++ b/varnish-tools/webgui/templates/master.tmpl
@@ -8,12 +8,12 @@
 <TMPL_IF NAME=AUTO_REFRESH_INTERVAL>
 <meta http-equiv="refresh" content="<TMPL_VAR NAME=AUTO_REFRESH_INTERVAL>">
 </TMPL_IF>
-<title>Varnish - Lust controller christmas edition</title>
+<title>Varnish - Lust controller</title>
 </head>
 <body>
 <div id="canvas">
 <div id="header">
-<img id="headerLogo" src="images/varnish-logo-christmas.png" id="logo"/>
+<img id="headerLogo" src="images/varnish-logo.png" id="logo"/><br/>
 <span id="menu">
 <a href="/view_stats" class="menu">View stats</a>
 <a href="/configure_parameters" class="menu">Configure parameters</a>
