--- a/varnish-tools/webgui/css/web.css
+++ b/varnish-tools/webgui/css/web.css
@@ -24,7 +24,7 @@ img#headerLogo {
 }
 
 #menu {
-	padding: 5px 3px 5px 3px;
+	padding: 5px 3px 5px 15px;
 	text-align: center;
 }
 
@@ -49,6 +49,7 @@ a.menu {
 }
 
 td.header {
+	vertical-align: top;
 	font-weight: bold;
 	border-style: solid;
 	border-width: 0px 0px 1px 0px;
@@ -186,4 +187,17 @@ input.removeNode {
 	border-width: 3px;
 	background-color: red;
 	padding: 5px;
+}
+
+td.addNodeBorder {
+	margin: 15px;
+}
+
+img.goToNodeManagement {
+	border-width: 0 0 1px 0;
+}
+
+a.showNodeStats {
+	font-size: 0.7em;
+	margin-left: 30px;
 }
