--- a/varnish-tools/webgui/templates/edit_vcl.tmpl
+++ b/varnish-tools/webgui/templates/edit_vcl.tmpl
@@ -105,16 +105,18 @@ function goToPosition(row, column) {
 }
 
 </script>
-<TMPL_IF NAME=GROUP_INFOS>
+<TMPL_IF NAME=UNIT_INFOS>
 <div class="tabArea">
 <div class="tabHeader">
-<TMPL_LOOP NAME=GROUP_INFOS>
+<TMPL_LOOP NAME=UNIT_INFOS>
 <TMPL_IF NAME=SELECTED>
 <span class="selectedTab">
 <TMPL_ELSE>
 <span class="tab">
 </TMPL_IF>
-<a href="edit_vcl?group_name=<TMPL_VAR NAME=NAME>"><TMPL_VAR NAME=NAME></a>
+<a href="edit_vcl?unit_id=<TMPL_VAR NAME=ID>&is_node=<TMPL_VAR NAME=IS_NODE>">
+<TMPL_VAR NAME=NAME><TMPL_IF NAME=IS_NODE> (N)<TMPL_ELSE> (G)</TMPL_IF>
+</a>
 </span>
 </TMPL_LOOP>
 </div>
@@ -124,6 +126,7 @@ function goToPosition(row, column) {
 <table>
 <tr>
 <td>
+<TMPL_UNLESS NAME=RESTRICTED>
 <input type="button" onclick="showNewEntry();" value="New"/>
 </td>
 <td id="newVclCell" style="display: none;">
@@ -132,6 +135,7 @@ function goToPosition(row, column) {
 </td>
 <td>
 |
+</TMPL_UNLESS>
 <select name="vcl_name">
 <TMPL_LOOP NAME=VCL_INFOS>
 <option 
@@ -149,18 +153,21 @@ value="<TMPL_VAR NAME=NAME>"><TMPL_VAR NAME=NAME>
 <td>
 <input type="hidden" value="load" name="operation"/>
 <input type="submit" value="Load"/>
+<TMPL_UNLESS NAME=RESTRICTED>
 <TMPL_IF NAME=EDITING_NEW_VCL>
 <input type="button" disabled value="Make active"/>
 <TMPL_ELSE>
 <input type="button" onclick="this.form.operation.value='make_active'; this.form.submit();" value="Make active"/>
 </TMPL_IF>
-<TMPL_LOOP NAME=GROUP_INFOS>
+<TMPL_LOOP NAME=UNIT_INFOS>
 <TMPL_IF NAME=SELECTED>
-<input type="hidden" name="group_name" value="<TMPL_VAR NAME=NAME>"/>
+<input type="hidden" name="unit_id" value="<TMPL_VAR NAME=ID>"/>
+<input type="hidden" name="is_node" value="<TMPL_VAR NAME=IS_NODE>"/>
 </TMPL_IF>
 </TMPL_LOOP>
 <input type="button" onclick="this.form.operation.value='save'; this.form.submit();" value="Save"/>
-| <input type="button" onclick="this.form.operation.value='discard'; this.form.submit();" value="Discard"/>
+| <input type="button" onclick="if (confirm('Are you sure you want to discard the VCL?')){ this.form.operation.value='discard'; this.form.submit();}" value="Discard"/>
+</TMPL_UNLESS>
 </td>
 </tr>
 </table>
