--- a/varnish-tools/webgui/templates/master.tmpl
+++ b/varnish-tools/webgui/templates/master.tmpl
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <link rel="stylesheet" type="text/css" href="css/web.css" />
-<link rel="icon" type="image/png" href="/images/favicon.png">
+<link rel="icon" type="image/png" href="/images/favicon.png"/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <TMPL_IF NAME=AUTO_REFRESH_INTERVAL>
 <meta http-equiv="refresh" content="<TMPL_VAR NAME=AUTO_REFRESH_INTERVAL>">
@@ -13,7 +13,7 @@
 <body>
 <div id="canvas">
 <div id="header">
-<img id="headerLogo" src="images/varnish-logo.png" id="logo"/><br/>
+<img id="headerLogo" src="images/varnish-logo.png"/><br/>
 <span id="menu">
 <a href="/view_stats" class="menu">View stats</a>
 <a href="/configure_parameters" class="menu">Configure parameters</a>
